--- a/topo/bond/forch.yaml
+++ b/topo/bond/forch.yaml
@@ -9,6 +9,14 @@ site:
       port: 9020
 orchestration:
   static_device_placement: placement.yaml
+proxy_server:
+  targets:
+      - name: faucet
+        port: 8001
+      - name: forch
+        port: 8302
+      - name: gauge
+        port: 9001
 process:
   scan_interval_sec: 10
   processes:
