--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -24,12 +24,12 @@ orchestration:
     auth_timeout_sec: 3559
 proxy_server:
   targets:
-      - name: faucet
-        port: 8001
-      - name: forch
-        port: 8302
-      - name: gauge
-        port: 9001
+    faucet: 
+      port: 8001
+    forch: 
+      port: 8302
+    gauge: 
+      port: 9001
 process:
   scan_interval_sec: 10
   processes:
