--- a/topo/solo/forch.yaml
+++ b/topo/solo/forch.yaml
@@ -22,6 +22,14 @@ orchestration:
     max_radius_backoff: 10
     query_timeout_sec: 15
     reject_timeout_sec: 360
+proxy_server:
+  targets:
+    faucet: 
+      port: 8001
+    forch: 
+      port: 8302
+    gauge: 
+      port: 9001
     auth_timeout_sec: 3559
 process:
   scan_interval_sec: 10
