--- a/radius_server/freeradius/clients.conf
+++ b/radius_server/freeradius/clients.conf
@@ -11,3 +11,13 @@ client dockerbr {
     ipaddr = 172.17.0.1
     secret = SECRET
 }
+
+modules {
+    files users {
+        usersfile = ${confdir}/users
+    }
+    files macs {
+        key = "%{Calling-Station-ID}"
+        usersfile = ${confdir}/macs
+    }
+}
