--- a/testing/unit/test_data/simple_faucet_behavioral.yaml
+++ b/testing/unit/test_data/simple_faucet_behavioral.yaml
@@ -3,10 +3,11 @@ dps:
     dp_id: 121
     interfaces:
       1:
-        description: "HOST"
+        description: HOST
         max_hosts: 1
         native_vlan: 100
       2:
-        description: "HOST"
+        description: HOST
         max_hosts: 1
-          native_vlan: 100
+        native_vlan: 100
+include: []
