--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -10,6 +10,7 @@ site:
 orchestration:
   structural_config_file: faucet_structural.yaml
   unauthenticated_vlan: 100
+  tail_acl: tail_acl
   static_device_placement: placement.yaml
   static_device_behavior: behaviors.yaml
   auth_config:
