--- a/.pylintrc
+++ b/.pylintrc
@@ -6,6 +6,6 @@ max-line-length=100
 ignored-classes=
     State, SystemState, CpnState, CpnConfig,
     FaucetEvent, ProcessState, DataplaneState, SwitchState,
-    BuildingSchema, LacpState, AuthResult,
+    BuildingSchema, LacpState, AuthResult, DVAState,
     DevicesState, DevicePlacement, DeviceBehavior, SegmentsToVlans,
     ForchConfig, SiteConfig, OrchestrationConfig, AuthConfig, HttpConfig
