--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -43,3 +43,12 @@ process:
       regex: ^python.*forch$
     sleep:
       regex: "sleep 50\\.3231"
+dataplane_monitoring:
+  pkt_rate_interval_sec: 10
+  vlan_pkt_per_sec_thresholds:
+    0: 1
+    100: 1
+    200: 1
+    300: 1
+    400: 1
+    4096: 1
