--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -43,3 +43,10 @@ process:
       regex: ^python.*forch$
     sleep:
       regex: "sleep 50\\.3231"
+dataplane_monitoring:
+  gauge_metrics_interval_sec: 10
+  vlan_pkt_per_sec_thresholds:
+    0: 20
+    100: 20
+    500: 1
+    4096: 1
