--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifier =
     Topic :: System :: Networking
     Natural Language :: English
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Operating System :: Unix
 
 [files]
@@ -22,6 +23,5 @@ console_scripts =
     forch = forch.__main__:main
 
 [pytype]
-python_version = 3.6
 pythonpath =
     .:
