--- a/topo/dva/faucet.yaml
+++ b/topo/dva/faucet.yaml
@@ -226,8 +226,42 @@ dps:
         description: "to t1sw2 port 11"
         stack: {dp: nz-kiwi-t1sw2, port: 11}
     lldp_beacon: {max_per_interval: 5, send_interval: 5}
+acls:
+  uniform_100:
+    - rule:
+        description: allow DHCP
+        dl_type: 0x0800
+        ip_proto: 17
+        ipv4_dst: 192.168.1.254
+        udp_dst: 67
+        actions:
+          allow: True
+    - rule:
+        description: allow ARP request
+        dl_type: 0x0806
+        eth_dst: "ff:ff:ff:ff:ff:ff"
+        actions:
+          allow: True
+    - rule:
+        description: deny all
+        actions:
+          allow: False
+  uniform_200:
+    - rule:
+        description: allow all
+        actions:
+          allow: True
+  uniform_300:
+    - rule:
+        description: allow all
+        actions:
+          allow: True
+  uniform_400:
+    - rule:
+        description: allow all
+        actions:
+          allow: False
 include:
-  - uniform-acls.yaml
   - role-based-acls.yaml
 version: 2
 vlans:
