--- a/topo/dva/faucet_block-yellow.yaml
+++ b/topo/dva/faucet_block-yellow.yaml
@@ -1,38 +1,44 @@
 acls:
   uniform_100:
-    - rule:
-        description: allow DHCP
-        dl_type: 0x0800
-        ip_proto: 17
-        ipv4_dst: 192.168.1.254
-        udp_dst: 67
-        actions:
-          allow: True
-    - rule:
-        description: allow ARP request
-        dl_type: 0x0806
-        eth_dst: "ff:ff:ff:ff:ff:ff"
-        actions:
-          allow: True
-    - rule:
-        description: deny all
-        actions:
-          allow: False
+  - rule:
+      actions:
+        allow: true
+      cookie: 6
+      description: allow DHCP
+      dl_type: 2048
+      ip_proto: 17
+      ipv4_dst: 192.168.1.254
+      udp_dst: 67
+  - rule:
+      actions:
+        allow: true
+      cookie: 7
+      description: allow ARP request
+      dl_type: 2054
+      eth_dst: ff:ff:ff:ff:ff:ff
+  - rule:
+      actions:
+        allow: false
+      cookie: 8
+      description: deny all
   uniform_200:
-    - rule:
-        description: allow all
-        actions:
-          allow: True
+  - rule:
+      actions:
+        allow: true
+      cookie: 9
+      description: allow all
   uniform_300:
-    - rule:
-        description: allow all
-        actions:
-          allow: True
+  - rule:
+      actions:
+        allow: true
+      cookie: 10
+      description: allow all
   uniform_400:
-    - rule:
-        description: allow all
-        actions:
-          allow: False
+  - rule:
+      actions:
+        allow: false
+      cookie: 11
+      description: allow all
 dps:
   nz-kiwi-t1sw1:
     dp_id: 177
