Remove python version lower than 3.8 requirement

--- a/esdn-faucet/setup.cfg
+++ b/esdn-faucet/setup.cfg
@@ -11,12 +11,12 @@ classifier =
     Topic :: System :: Networking
     Natural Language :: English
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Operating System :: Unix
 [files]
 packages =
     esdn-faucet
 
 [pytype]
-python_version = 3.6
 pythonpath =
     .:
