--- a/topo/dva/forch/forch.yaml
+++ b/topo/dva/forch/forch.yaml
@@ -13,6 +13,7 @@ orchestration:
   tail_acl: tail_acl
   static_device_placement: placement.yaml
   static_device_behavior: behaviors.yaml
+  gauge_config_file: gauge.yaml
   auth_config:
     radius_info:
       server_ip: 172.17.0.5
