--- a/topo/solo/forch/forch.yaml
+++ b/topo/solo/forch/forch.yaml
@@ -8,7 +8,7 @@ site:
       fqdn: localhost.n
       port: 9020
 orchestration:
-  structural_config_file: faucet_structural.yaml
+  structural_config_file: faucet.yaml
   unauthenticated_vlan: 100
   static_device_placement: example_placement.yaml
   static_device_behavior: example_behavior.yaml
