--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -8,11 +8,12 @@ site:
       fqdn: localhost.n
       port: 9020
 orchestration:
-  structural_config_file: faucet_structural.yaml
+  structural_config_file: faucet.yaml
   unauthenticated_vlan: 100
   tail_acl: tail_acl
   static_device_placement: placement.yaml
   static_device_behavior: behaviors.yaml
+  gauge_config_file: gauge.yaml
   auth_config:
     radius_info:
       server_ip: 172.17.0.5
