--- a/topo/dva/forch/forch.yaml
+++ b/topo/dva/forch/forch.yaml
@@ -8,11 +8,12 @@ site:
       fqdn: localhost.n
       port: 9020
 orchestration:
-  structural_config_file: faucet_structural.yaml
+  structural_config_file: faucet.yaml
   unauthenticated_vlan: 100
-  static_device_placement: example_placement.yaml
-  static_device_behavior: example_behavior.yaml
-  segments_vlans_file: example_segments-to-vlans.yaml
+  tail_acl: tail_acl
+  static_device_placement: placement.yaml
+  static_device_behavior: behaviors.yaml
+  gauge_config_file: gauge.yaml
   auth_config:
     radius_info:
       server_ip: 172.17.0.5
@@ -25,11 +26,11 @@ orchestration:
     auth_timeout_sec: 3559
 proxy_server:
   targets:
-    faucet: 
+    faucet:
       port: 8001
-    forch: 
+    forch:
       port: 8302
-    gauge: 
+    gauge:
       port: 9001
 process:
   scan_interval_sec: 10
@@ -40,6 +41,13 @@ process:
     gauge:
       regex: python.*ryu-manager.*faucet\.gauge
     forch:
-      regex: ^python.*forch\.forchestrator
+      regex: ^python.*forch$
     sleep:
       regex: "sleep 50\\.3231"
+dataplane_monitoring:
+  gauge_metrics_interval_sec: 10
+  vlan_pkt_per_sec_thresholds:
+    0: 20
+    100: 20
+    500: 1
+    4096: 1
