Update forch process regex

--- a/topo/bond/forch/forch.yaml
+++ b/topo/bond/forch/forch.yaml
@@ -24,7 +24,7 @@ process:
     gauge:
       regex: python.*ryu-manager.*faucet\.gauge
     forch:
-      regex: ^python.*forch$
+      regex: "python3 -m forch"
     sleep:
       regex: "sleep 50\\.3231"
   connections:
