--- a/topo/solo/forch/forch.yaml
+++ b/topo/solo/forch/forch.yaml
@@ -40,6 +40,6 @@ process:
     gauge:
       regex: python.*ryu-manager.*faucet\.gauge
     forch:
-      regex: ^python.*forch\.forchestrator
+      regex: "python3 -m forch"
     sleep:
       regex: "sleep 50\\.3231"
