--- a/etc/Dockerfile.faux
+++ b/etc/Dockerfile.faux
@@ -15,4 +15,6 @@ RUN $AG update && $AG install net-tools bash iproute2 iputils-ping tcpdump strac
 # Weird workaround for problem running tcdump in a privlidged container.
 RUN mv /usr/sbin/tcpdump /usr/bin/tcpdump
 
-CMD ["tail", "-f", "/dev/null"]
+COPY etc/start_faux .
+
+CMD ["./start_faux"]
