--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -100,6 +100,6 @@ jobs:
       - name: build docker
         run: bin/retry_cmd bin/build_docker
       - name: setup stack
-        run: bin/setup_stack local
+        run: bin/setup_stack local dhcp
       - name: run test
         run: bin/run_test_set stack
