Use DHCP for some containers (#140)

--- a/etc/Dockerfile.faux
+++ b/etc/Dockerfile.faux
@@ -10,9 +10,11 @@ COPY bin/retry_cmd bin/
 ENV AG="bin/retry_cmd apt-get -qqy --no-install-recommends -o=Dpkg::Use-Pty=0"
 
 RUN $AG update && $AG install net-tools bash iproute2 iputils-ping tcpdump strace vim \
-    jq nano ethtool netcat curl ifupdown 
+    jq nano ethtool netcat curl ifupdown isc-dhcp-client dnsmasq
 
 # Weird workaround for problem running tcdump in a privlidged container.
 RUN mv /usr/sbin/tcpdump /usr/bin/tcpdump
 
-CMD ["tail", "-f", "/dev/null"]
+COPY etc/start_faux .
+
+CMD ["./start_faux"]
