--- a/topo/bond/faucet/faucet.yaml
+++ b/topo/bond/faucet/faucet.yaml
@@ -8,7 +8,7 @@ dps:
       priority: 1
     interfaces:
       4:
-        description: TESTING trunk
+        description: trunk
         tagged_vlans: [272]
       6:
         description: "to t1sw2 port 6"
