--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -137,7 +137,5 @@ jobs:
         run: bin/setup_faucet
       - name: build docker
         run: bin/retry_cmd bin/build_docker
-      - name: setup stack
-        run: bin/setup_stack devices 5 switches 9 scale
       - name: run test
-        run: bin/run_test_set failscale
+        run: test/python_test test_failscale
