--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -138,4 +138,4 @@ jobs:
       - name: build docker
         run: bin/retry_cmd bin/build_docker
       - name: run test
-        run: test/python_test test_failscale
+        run: testing/python_test test_failscale
