Test device roles that contains different types of symbols

--- a/topo/dva/forch/role-based-acls.yaml
+++ b/topo/dva/forch/role-based-acls.yaml
@@ -1,5 +1,5 @@
 acls:
-  role_red:
+  role_hello_world.foo.bar#bazqux@quuxquuz123:
     - rule:
         description: allow ICMP
         dl_type: 0x800      # IPv4
