--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -2,11 +2,13 @@
 
 FROM faucet/python3:5.0.1
 
-RUN apk add -q tcpdump iptables sudo
+RUN apk add -q tcpdump iptables sudo linux-headers
 
 COPY faucet/ /faucet-src/
+COPY . /forch-src/
 
 RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
+RUN /forch-src/bin/install-forch.sh && rm -rf /forch-src/.git
 
 # Check for target executable since installer doesn't error out properly.
 RUN which faucet
