--- a/topo/counting/forch/forch.yaml
+++ b/topo/counting/forch/forch.yaml
@@ -34,3 +34,5 @@ process:
       regex: "python3 -m forch"
     sleep:
       regex: "sleep 50\\.3231"
+dataplane_monitoring:
+  gauge_metrics_interval_sec: 10
