--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9),
                python3-wheel,
                python3-protobuf,
                python3-watchdog,
-               python3-grpc,
+               python3-grpcio,
                pylint,
                python3-pbr (>= 1.9),
 Standards-Version: 3.9.6
@@ -26,7 +26,7 @@ Package: python3-forch
 Architecture: all
 Depends: python3-faucet (= FAUCET_VERSION),
          python3-all (>= 3.7),
-         python3-grpc,
+         python3-grpcio,
          python3-netaddr,
          python3-networkx,
          python3-prometheus-client (>= 0.8.0), python3-prometheus-client (<< 0.8.1),
